--- a/styles/jsdoc-default.css
+++ b/styles/jsdoc-default.css
@@ -526,6 +526,38 @@ section.readme {
 	display: block;
 }
 
+.search {
+    background: #f5f5f5;
+    padding: 0.5em;
+}
+
+.search-result {
+	display: none;
+	visibility: hidden;
+}
+.search-result.match {
+	display: block;
+	visibility: visible;
+}
+.name.opened-anchor {
+    background: hsl(60, 80%, 80%);
+}
+
+ul#search-results {
+    width: 20em;
+    overflow-x: auto;
+    max-height: 20em;
+}
+
+#search-query {
+    width: 100%;
+    display: block;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    padding: 0.2rem;
+    box-sizing: border-box;
+}
+
 @media screen and (min-width: 1280px) {
 	.main-nav-link {
 		display: none;
